--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "@swc/helpers": "~0.5.0",
     "next": "13.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -20,6 +21,8 @@
     "@nx/react": "^16.1.1",
     "@nx/vite": "16.1.1",
     "@nx/workspace": "16.1.1",
+    "@swc/cli": "~0.1.62",
+    "@swc/core": "~1.3.51",
     "@testing-library/react": "14.0.0",
     "@types/jest": "^29.4.0",
     "@types/node": "18.14.2",
