Add example app for testing and sample building

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,6 +15,7 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "@fralo-tech/base-builder": ["packages/base-builder/src/index.ts"],
       "@fralo-tech/components": ["packages/components/src/index.ts"]
     }
   },
