--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "tslib": "^2.3.0"
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.14.5",
     "@nx/cypress": "16.1.1",
     "@nx/eslint-plugin": "16.1.1",
     "@nx/jest": "16.1.1",
@@ -19,8 +20,11 @@
     "@nx/linter": "16.1.1",
     "@nx/next": "^16.1.1",
     "@nx/react": "^16.1.1",
+    "@nx/rollup": "16.1.1",
     "@nx/vite": "16.1.1",
     "@nx/workspace": "16.1.1",
+    "@rollup/plugin-url": "^7.0.0",
+    "@svgr/rollup": "^6.1.2",
     "@swc/cli": "~0.1.62",
     "@swc/core": "~1.3.51",
     "@testing-library/react": "14.0.0",
