--- a/packages/base-builder/project.json
+++ b/packages/base-builder/project.json
@@ -2,71 +2,49 @@
   "name": "base-builder",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "packages/base-builder/src",
-  "projectType": "application",
+  "projectType": "library",
+  "tags": [],
   "targets": {
-    "build": {
-      "executor": "@nx/vite:build",
-      "outputs": ["{options.outputPath}"],
-      "defaultConfiguration": "production",
-      "options": {
-        "outputPath": "dist/packages/base-builder"
-      },
-      "configurations": {
-        "development": {
-          "mode": "development"
-        },
-        "production": {
-          "mode": "production"
-        }
-      }
-    },
-    "serve": {
-      "executor": "@nx/vite:dev-server",
-      "defaultConfiguration": "development",
-      "options": {
-        "buildTarget": "base-builder:build"
-      },
-      "configurations": {
-        "development": {
-          "buildTarget": "base-builder:build:development",
-          "hmr": true
-        },
-        "production": {
-          "buildTarget": "base-builder:build:production",
-          "hmr": false
-        }
-      }
-    },
-    "preview": {
-      "executor": "@nx/vite:preview-server",
-      "defaultConfiguration": "development",
-      "options": {
-        "buildTarget": "base-builder:build"
-      },
-      "configurations": {
-        "development": {
-          "buildTarget": "base-builder:build:development"
-        },
-        "production": {
-          "buildTarget": "base-builder:build:production"
-        }
-      }
-    },
-    "test": {
-      "executor": "@nx/vite:test",
-      "outputs": ["coverage/packages/base-builder"],
-      "options": {
-        "passWithNoTests": true,
-        "reportsDirectory": "../../coverage/packages/base-builder"
-      }
-    },
     "lint": {
       "executor": "@nx/linter:eslint",
       "outputs": ["{options.outputFile}"],
       "options": {
         "lintFilePatterns": ["packages/base-builder/**/*.{ts,tsx,js,jsx}"]
       }
+    },
+    "build": {
+      "executor": "@nx/rollup:rollup",
+      "outputs": ["{options.outputPath}"],
+      "options": {
+        "outputPath": "dist/packages/base-builder",
+        "tsConfig": "packages/base-builder/tsconfig.lib.json",
+        "project": "packages/base-builder/package.json",
+        "entryFile": "packages/base-builder/src/index.ts",
+        "external": ["react", "react-dom", "react/jsx-runtime"],
+        "rollupConfig": "@nx/react/plugins/bundle-rollup",
+        "compiler": "babel",
+        "assets": [
+          {
+            "glob": "packages/base-builder/README.md",
+            "input": ".",
+            "output": "."
+          }
+        ]
+      }
+    },
+    "test": {
+      "executor": "@nx/jest:jest",
+      "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
+      "options": {
+        "jestConfig": "packages/base-builder/jest.config.ts",
+        "passWithNoTests": true
+      },
+      "configurations": {
+        "ci": {
+          "ci": true,
+          "codeCoverage": true
+        }
+      }
     }
-  },
-  "tags": []
+  }
 }
