--- a/package.json
+++ b/package.json
@@ -3,18 +3,26 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "client:development": "nx run client:serve:development",
-    "example:development": "nx run example:serve:development"
+    "client:dev": "nx run client:serve:development",
+    "builder:dev": "nx run example-builder:serve:development"
   },
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.12.4",
     "@swc/helpers": "~0.5.0",
+    "classnames": "^2.3.2",
+    "debounce": "^1.2.1",
     "immer": "10.0.1",
     "lodash": "4.17.21",
     "next": "13.3.0",
+    "re-resizable": "^6.9.9",
     "react": "18.2.0",
+    "react-color": "^2.19.3",
+    "react-contenteditable": "^3.3.7",
     "react-dom": "18.2.0",
+    "react-youtube": "10.1.0",
     "shallowequal": "1.1.0",
+    "styled-components": "^6.0.0-rc.1",
     "tiny-invariant": "1.3.1",
     "tslib": "^2.3.0"
   },
