Closes #20 - Add starter app

--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "license": "MIT",
   "scripts": {
     "client:dev": "nx run client:serve:development",
-    "builder:dev": "nx run example-builder:serve:development"
+    "builder:serve": "nx run builder-sample:serve"
   },
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
     "@material-ui/core": "^4.12.4",
+    "@mui/material": "^5.12.3",
     "@swc/helpers": "~0.5.0",
     "classnames": "^2.3.2",
     "debounce": "^1.2.1",
@@ -20,6 +23,7 @@
     "react-color": "^2.19.3",
     "react-contenteditable": "^3.3.7",
     "react-dom": "18.2.0",
+    "react-is": "18.2.0",
     "react-youtube": "10.1.0",
     "shallowequal": "1.1.0",
     "styled-components": "^6.0.0-rc.1",
@@ -48,12 +52,16 @@
     "@types/node": "18.14.2",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "@types/react-is": "17.0.3",
+    "@types/styled-components": "5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
     "@typescript-eslint/parser": "^5.58.0",
     "@vitejs/plugin-react": "^3.0.0",
     "@vitest/coverage-c8": "^0.31.0",
     "@vitest/ui": "^0.31.0",
+    "autoprefixer": "10.4.13",
     "babel-jest": "^29.4.1",
+    "babel-plugin-styled-components": "1.10.7",
     "cypress": "^12.11.0",
     "eslint": "~8.15.0",
     "eslint-config-next": "13.3.0",
@@ -68,8 +76,10 @@
     "jsdom": "~20.0.3",
     "nx": "16.1.1",
     "nx-cloud": "latest",
+    "postcss": "8.4.21",
     "prettier": "^2.6.2",
     "react-test-renderer": "18.2.0",
+    "tailwindcss": "3.2.7",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "typescript": "~5.0.2",
