--- a/package.json
+++ b/package.json
@@ -40,9 +40,14 @@
     "@nx/next": "^16.1.1",
     "@nx/react": "^16.1.1",
     "@nx/rollup": "16.1.1",
+    "@nx/storybook": "16.1.1",
     "@nx/vite": "16.1.1",
+    "@nx/web": "16.1.1",
     "@nx/workspace": "16.1.1",
     "@rollup/plugin-url": "^7.0.0",
+    "@storybook/addon-essentials": "^7.0.8",
+    "@storybook/core-server": "^7.0.8",
+    "@storybook/react-vite": "^7.0.8",
     "@svgr/rollup": "^6.1.2",
     "@swc/cli": "~0.1.62",
     "@swc/core": "~1.3.51",
