--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/material": "^5.12.3",
     "@swc/helpers": "~0.5.0",
     "classnames": "^2.3.2",
+    "daisyui": "2.51.6",
     "debounce": "^1.2.1",
     "immer": "10.0.1",
     "lodash": "4.17.21",
