--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@material-ui/core": "^4.12.4",
+    "@mui/base": "5.0.0-alpha.128",
     "@mui/material": "^5.12.3",
     "@swc/helpers": "~0.5.0",
     "classnames": "^2.3.2",
