--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/base": "5.0.0-alpha.128",
     "@mui/material": "^5.12.3",
     "@radix-ui/react-radio-group": "1.1.3-rc.1",
+    "@radix-ui/react-tooltip": "^1.0.5",
     "@swc/helpers": "~0.5.0",
     "classnames": "^2.3.2",
     "daisyui": "2.51.6",
