--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@material-ui/core": "^4.12.4",
     "@mui/base": "5.0.0-alpha.128",
     "@mui/material": "^5.12.3",
+    "@nxext/solid": "^16.2.0",
     "@radix-ui/react-accordion": "^1.1.1",
     "@radix-ui/react-radio-group": "1.1.3-rc.1",
+    "@radix-ui/react-slider": "1.1.2",
     "@radix-ui/react-tooltip": "^1.0.5",
     "@swc/helpers": "~0.5.0",
     "classnames": "^2.3.2",
