--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "fralo-tech",
   "version": "0.0.0",
-  "license": "MIT",
+  "license": "Apache-2.0",
   "scripts": {
     "client:dev": "nx run client:serve:development",
     "builder:serve": "nx run builder-sample:serve:development",
@@ -42,7 +42,6 @@
     "@babel/preset-react": "^7.14.5",
     "@nx/cypress": "16.1.1",
     "@nx/eslint-plugin": "16.1.1",
-    "@nx/jest": "16.1.1",
     "@nx/js": "16.1.1",
     "@nx/linter": "16.1.1",
     "@nx/next": "^16.1.1",
@@ -52,6 +51,7 @@
     "@nx/vite": "16.1.1",
     "@nx/web": "16.1.1",
     "@nx/workspace": "16.1.1",
+    "@nxext/solid": "^16.2.0",
     "@rollup/plugin-url": "^7.0.0",
     "@storybook/addon-essentials": "^7.0.8",
     "@storybook/core-server": "^7.0.8",
@@ -60,7 +60,6 @@
     "@swc/cli": "~0.1.62",
     "@swc/core": "~1.3.51",
     "@testing-library/react": "14.0.0",
-    "@types/jest": "^29.4.0",
     "@types/lodash": "4.14.194",
     "@types/node": "18.14.2",
     "@types/react": "18.0.28",
@@ -73,7 +72,6 @@
     "@vitest/coverage-c8": "^0.31.0",
     "@vitest/ui": "^0.31.0",
     "autoprefixer": "^10.4.14",
-    "babel-jest": "^29.4.1",
     "babel-plugin-styled-components": "1.10.7",
     "cypress": "^12.11.0",
     "eslint": "~8.15.0",
@@ -84,16 +82,12 @@
     "eslint-plugin-jsx-a11y": "6.7.1",
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
-    "jest": "^29.4.1",
-    "jest-environment-jsdom": "^29.4.1",
-    "jsdom": "~20.0.3",
     "nx": "16.1.1",
     "nx-cloud": "latest",
     "postcss": "8.4.23",
     "prettier": "^2.6.2",
     "react-test-renderer": "18.2.0",
     "tailwindcss": "3.2.7",
-    "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "typescript": "~5.0.2",
     "vite": "^4.3.4",
